--- a/css/style.css
+++ b/css/style.css
@@ -74,8 +74,7 @@
     color: aqua;
     background-color: var(--primary-color);
     height: 50%;
-    margin: auto 0;
-    
+    margin: auto 0; 
 }
 #bannertext h1,
 #bannertext p {
@@ -570,7 +569,7 @@ footer {
         width: 80%;
     }
     .reviewinsidecontent{
-        width: 43%;
+        width: 48%;
     }
     .reviewinsidecontent p{
         padding-right: 20px;
@@ -1109,5 +1108,11 @@ footer {
     }
     #footer1 p{
         padding-bottom: 25px;
+    }
+}
+@media (min-width: 600px){
+    .home{
+        overflow: hidden;
+        padding-bottom: 20px;
     }
 }
